# ProjetHanoi

./: .gitignore  Dashboard.py  MakeFile  Makefile  README.md  RobotLogger.py  SimuAlgoEtBras.py  main.py  pyproject.toml  requirements.txt  test.py
Bloc Vision/: vision.py
BlocAlgo/: HanoiAlgorithm.py  HanoiIterative.py  SimulationMoves.py  algo.py  algooo.py  all.py  test_algo.py
BlocInterface/: DetectionInterface.py
BlocRobot/: DobotCalibrate.py  DobotControl.py  Exemple_JOG.py  Exemple_PTP.py  Filter_pydobot.py  InitPos.py  InitPosition.py  TestConnect.py  TestRobot.py  requirement.txt  test.py  test_ventouse.py
BlocVision/: CameraProcessor.py  DetectionInterface.py  requirements.txt  test.py  vision.py
