[tool.poetry]
name = "projethanoi"
version = "0.1.0"
description = ""
authors = ["Zazou <aito.kenza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.10.0"
isort = "^5.13.2"
lint = "^1.2.1"
pytest = "^8.3.3"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
