[tool.poetry]
name = "hanoi"
version = "0.1.0"
description = ""
authors = ["Vincent Chaumette <vincent.chaumette@etu.univ-tours.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
pydobot = "^1.3.2"
dearpygui = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
