[tool.poetry]
name = "hanoi"
version = "0.1.0"
description = ""
authors = ["Vincent Chaumette <vincent.chaumette@etu.univ-tours.fr>"]
readme = "README.md"

# Définir où trouver les modules Python
packages = [{include = "BlocVision"}]  # Remplace "BlocVision" par le nom de ton dossier de code si nécessaire

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^2.2.2"
opencv-python = "^4.11.0.86"
pydobot = "^1.3.2"
dearpygui = "^2.0.0"
opencv-contrib-python = "^4.11.0.86"
# Retirer la dépendance "tk" car Tkinter fait partie de Python
pyqt6 = "^6.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
